[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zip-password-recovery"
version = "0.1.0"
description = "CLI tool for recovering forgotten ZIP passwords using constrained brute force"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Yisak Metaferiya"}]

[project.scripts]
crack_zip = "zip_password_recovery.cli:main"
